--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,14 @@
         <module>hauwei_framework</module>
         <module>huawei_admin</module>
         <module>hauwei_blog</module>
+        <module>huawei_admin</module>
+        <module>huawei_admin</module>
     </modules>
 
     <properties>
-        <java.version>17</java.version>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <java.version>8</java.version>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
